Prevent long strings to overflow container

--- a/app/_assets/_scss/_components.content.scss
+++ b/app/_assets/_scss/_components.content.scss
@@ -4,6 +4,8 @@
 
 .content {
 
+    word-wrap: break-word;
+
     /**
      * [1]: better spacing for headings
      */
